--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ h1{
 
 .form{
     background-color: rgb(5, 5, 5);
-    box-shadow: 0 10px 20px -2px rgb(128, 105, 105);
+    box-shadow: 0 10px 20px -2px ;
     display: flex;
     flex-flow: row wrap;
     gap: 20px;
@@ -131,7 +131,7 @@ input:focus{
 }
 
 button{
-    background-color: rgba(0, 0, 0, 0);
+    background-color:black;
     color: var(--color);
     font-weight: 700;
     font-size: 1.2em;
@@ -143,7 +143,7 @@ button{
 
 button:hover{
     background-color: var(--color);
-    color: black;
+    color: rgb(241, 238, 238);
     
 }
 
